:recycle: Fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,13 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
+    --background-dark: 224 71% 4%;
+
     --foreground: 222.2 47.4% 11.2%;
+    --foreground-dark: 213 31% 91%;
+
+    --muted-dark: 223 47% 11%;
+    --muted-foreground-dark: 215.4 16.3% 56.9%;
 
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
